Cleanup and update